--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
@@ -3,10 +3,20 @@
 <RelativeLayout
     android:id="@+id/relative"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="690px"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:splitMotionEvents="false">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="8px"
+        android:id="@+id/topRlOuter"
+        android:background="@drawable/shadow_up"
+        android:layout_marginLeft="11px"
+        android:layout_marginRight="11px"
+        android:layout_marginTop="8px"
+        />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -14,7 +24,10 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15px"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginBottom="2px"
+        card_view:cardElevation="4dp"
+        card_view:cardUseCompatPadding="true"
         android:background="@drawable/list_white_selector"
         card_view:cardBackgroundColor="@color/white">
 
@@ -22,7 +35,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
 
         <RelativeLayout
             android:id="@+id/relativeLayoutHead"
@@ -40,10 +52,12 @@
                 android:textSize="30px"/>
 
             <ImageView
-                android:layout_width="21px"
-                android:layout_height="20px"
+                android:id="@+id/arrowSlider"
+                android:layout_width="23px"
+                android:layout_height="22px"
+                android:layout_marginTop="7px"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="60px"
+                android:layout_marginRight="36px"
                 android:src="@drawable/arrow_thick_new"/>
 
         </RelativeLayout>
@@ -119,7 +133,7 @@
 
 
             <RelativeLayout
-                android:layout_width="195px"
+                android:layout_width="180px"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15px"
