--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
@@ -15,7 +15,7 @@
             android:layout_height="96px"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:background="@color/menu_black">
+            android:background="@color/black_top_bar_bg">
 
             <Button
                 android:id="@+id/backBtn"
