--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_history.xml
@@ -17,7 +17,7 @@
             android:id="@+id/topRl"
             android:layout_width="match_parent"
             android:layout_height="96px"
-            android:background="@color/menu_black"
+            android:background="@color/black_top_bar_bg"
             android:splitMotionEvents="false"
             android:orientation="horizontal"
             >
