--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
@@ -11,7 +11,7 @@
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
-        android:background="@color/menu_black"
+        android:background="@color/black_top_bar_bg"
         android:splitMotionEvents="false">
 
         <Button
