--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_payments.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_payments.xml
@@ -13,7 +13,7 @@
         android:layout_height="96px"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@color/blue_black_v2">
+        android:background="@color/black_top_bar_bg">
 
         <TextView
             android:id="@+id/textViewTitle"
