--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_sliding_menu.xml
@@ -10,8 +10,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="140px"
-        android:background="@color/grey_light_alpha"/>
+        android:layout_marginTop="160px"
+        android:background="@color/sliding_bottom_bg_color"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewInfo"
@@ -19,18 +19,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageViewSliderView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="-40px"
+        android:layout_marginTop="-55px"
         android:fadeScrollbars="true"
         android:scrollbars="vertical"
         android:visibility="visible"/>
 
     <ImageView
         android:id="@+id/imageViewSliderView"
-        android:layout_width="80px"
-        android:layout_height="80px"
+        android:layout_width="95px"
+        android:layout_height="95px"
         android:layout_alignParentRight="true"
         android:layout_marginRight="80px"
-        android:src="@drawable/up_arrow"/>
+        android:src="@drawable/up_arrow_even_sahdow"/>
 
 
 
