--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
@@ -14,8 +14,8 @@
 
         <TextView
         android:id="@+id/textViewInfoText"
-        android:layout_width="460px"
-        android:layout_height="45px"
+        android:layout_width="480px"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="@string/jugnoo_cut"
         android:textColor="@color/black_text_v2"
