--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <color name="white">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="new_transparent_white">#2eFFFFFF</color>
 
     <color name="white_dark">#AFAFAF</color>
-   <color name="white_dark1">#EFEFEF</color>
-   
-   
-   <color name="black">#202020</color>
-   <color name="black_light">#505050</color>
+    <color name="white_dark1">#EFEFEF</color>
+
+
+    <color name="black">#202020</color>
+    <color name="black_light">#505050</color>
 
     <color name="black_grey">#575757</color>
-   
-   <color name="black_text_shop">#1C1C1C</color>
+
+    <color name="black_text_shop">#1C1C1C</color>
     <color name="nl_white_dark">#E0E0E0</color>
     <color name="white_grey_v2">#e2e2e2</color>
     <color name="transparent_white">#50FFFFFF</color>
-   
-   <color name="white_translucent">#D8FFFFFF</color>
- <color name="white_light_dark">#EEEEEE</color>
- <color name="white_more_translucent">#66FFFFFF</color>
- <color name="white_light_grey">#FAFAFA</color>
- <color name="white_light_more_grey">#F3F3F3</color>
+
+    <color name="white_translucent">#D8FFFFFF</color>
+    <color name="white_light_dark">#EEEEEE</color>
+    <color name="white_more_translucent">#66FFFFFF</color>
+    <color name="white_light_grey">#FAFAFA</color>
+    <color name="white_light_more_grey">#F3F3F3</color>
     <color name="new_orange_op_30">#30f6863c</color>
 
     <color name="light_grey_op_77">#77f3f3f3</color>
@@ -37,26 +37,24 @@
     <color name="leaderboard_activity_text_color">#9D9D9D</color>
     <color name="blue_status">#338ffc</color>
 
-   
-   
-   
+
     <color name="transparent">#0000</color>
-    
+
     <color name="bg_grey">#D8242930</color>
     <color name="menu_black">#3E3639</color>
 
     <color name="bg_grey_opaque">#242930</color>
     <color name="bg_white_translucent">#AAFFFFFF</color>
-    
+
     <color name="blue_btn">#4CC1D2</color>
     <color name="blue_btn_pressed">#2CA1B2</color>
     <color name="blue_btn_alpha">#774CC1D2</color>
 
     <color name="status_yellow">#FF9C5A</color>
-    
+
     <color name="green_btn">#66BB66</color>
     <color name="green_btn_pressed">#669966</color>
-    
+
     <color name="grey_btn">#8E8E8E</color>
     <color name="grey_btn_pressed">#7E7E7E</color>
     <color name="new_orange_pressed">#F8A654</color>
@@ -70,16 +68,15 @@
     <color name="blue_dark_btn">#3B5999</color>
     <color name="blue_dark_btn_pressed">#1B3979</color>
     <color name="blue_black_v2">#3f3f4e</color>
-    
-    
+    <color name="black_earnings_bg">#2a2a3c</color>
+
     <color name="red_btn">#8E8E8E</color>
     <color name="red_btn_pressed">#7E7E7E</color>
-    
-    
-    
+
+
     <color name="favorite_bg">#393E44</color>
     <color name="favorite_div">#97989C</color>
-    
+
     <color name="yellow_jugnoo">#FAA31C</color>
     <color name="musturd_jugnoo">#FFAC00</color>
     <color name="status_pending">#f5a623</color>
@@ -87,28 +84,30 @@
     <color name="blue_leader">#4cc1d2</color>
 
 
-
-
-    <color name="yellow_status">#F89414</color>    
-    <color name="green_status">#2EA058</color>    
+    <color name="yellow_status">#F89414</color>
+    <color name="green_status">#2EA058</color>
     <color name="red_status">#F53C37</color>
     <color name="red_status_v2">#eb5635</color>
     <color name="red_v2">#ff8162</color>
-    
+
     <color name="orange_text">#FBBC12</color>
-    
+
     <color name="orange_btn">#F99613</color>
     <color name="orange_btn_pressed">#E98603</color>
-    
+
     <color name="orange_dark">#F96f01</color>
-    
+
     <color name="black_text">#242424</color>
+    <color name="black_top_bar_bg">#232937</color>
     <color name="black_text_v2">#595968</color>
     <color name="black_text_alpha">#99242424</color>
     <color name="grey_light_info_v2">#f0f0f0</color>
     <color name="grey_light_more">#BBBBBB</color>
     <color name="grey_light">#DDDDDD</color>
+    <color name="grey_light_op_60">#60DDDDDD</color>
+    <color name="grey_light_seprator">#60a1a0a0</color>
     <color name="grey_light_side_menu">#f9fafb</color>
+    <color name="grey_default">#fafbfc</color>
     <color name="grey_light_alpha">#99DDDDDD</color>
     <color name="grey_light_bg_v2">#d8d8d8</color>
     <color name="grey_light_v2">#bcbcbc</color>
@@ -121,19 +120,18 @@
     <color name="grey_menu_black_v2">#363645</color>
     <color name="grey_black_light">#3E3E3E</color>
     <color name="grey_ride_history">#6D6e71</color>
-
+    <color name="grey_ride_detail_bg">#f2f4f5</color>
+    <color name="grey_ride_detail">#9e9e9e</color>
     <color name="gradient_orange_v2">#ff8162</color>
     <color name="gradient_yellow_v2">#f8b542</color>
 
-    
-    
+
     <color name="blue_light">#4E75D8</color>
     <color name="blue_light_alpha">#994E75D8</color>
-    
-    
-    
+
+
     <color name="green_transaction_type">#46B82F</color>
-    
+
     <color name="dialog_border_color">#AA7E7D78</color>
 
 
@@ -155,9 +153,8 @@
     </integer-array>
 
 
-
     <color name="text_color">#2F221B</color>
     <color name="text_color_light">#992F221B</color>
-    
-   
+
+
 </resources>
