feature_new_ui_v2: UI changes and GA events

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_high_demand_areas.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_high_demand_areas.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:text="@string/high_demad"
+            android:text="@string/web_view"
             android:textColor="@color/white"
             android:textSize="42px" />
     </RelativeLayout>
