--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_normal.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_normal.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-<solid android:color="@color/new_orange"/>
+<solid android:color="@color/red_v2"/>
 <corners android:radius="@dimen/button_corner_radius"/>
 </shape>
