--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_daily_details_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/linear"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -34,6 +34,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewDailyInfo"
+        android:layout_below="@+id/topRl"
         android:layout_width="720px"
         android:layout_height="match_parent"
         android:visibility="visible"
@@ -53,4 +54,4 @@
         android:textSize="@dimen/button_text_size" />
 
 
-</LinearLayout>
+</RelativeLayout>
