--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/relativeLayoutPayout"
                 android:layout_width="match_parent"
                 android:layout_height="160px"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:background="@drawable/bg_transparent_blue_black_selector">
 
                 <TextView
@@ -98,14 +98,33 @@
 
             <RelativeLayout
                 android:id="@+id/relativelayoutChart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="448px"
                 android:padding="24px">
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayoutChartData"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
                     android:layout_height="400px"/>
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/textViewNoChartData"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:visibility="gone"
+                    android:layout_marginRight="18px"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/no_data"
+                    android:textSize="34px"/>
 
                 <RelativeLayout
                     android:id="@+id/relativelayoutRandom"
