--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_ride_details_new.xml
@@ -82,6 +82,7 @@
 
 
         <ImageView
+            android:id="@+id/imageViewSeprator"
             android:layout_width="640px"
             android:layout_height="2px"
             android:layout_marginTop="36px"
@@ -102,7 +103,7 @@
         <ImageView
             android:layout_width="640px"
             android:layout_height="2px"
-            android:layout_marginTop="24px"
+            android:layout_marginTop="12px"
             android:layout_marginBottom="24px"
             android:background="@color/grey_light"/>
 
