--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -263,6 +263,7 @@
                 android:id="@+id/homeRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
                 <ImageView
