--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -59,7 +59,8 @@
     <color name="grey_btn_pressed">#7E7E7E</color>
     <color name="new_orange_pressed">#F8A654</color>
     <color name="white_little_dark">#F8F8F8</color>
-    <color name="new_orange">#F6853A</color>
+    <color name="new_orange">#ff8162</color>
+    <color name="new_orange1">#F6853A</color>
     <color name="menu_black_pressed">#97918D</color>
     <color name="new_orange_path">#F8A654</color>
 
@@ -110,7 +111,7 @@
     <color name="grey_default">#fafbfc</color>
     <color name="grey_light_alpha">#99DDDDDD</color>
     <color name="grey_light_bg_v2">#d8d8d8</color>
-    <color name="grey_light_v2">#bcbcbc</color>
+    <color name="grey_light_v2">#A4A4A4</color>
     <color name="grey_dark_less">#A3A3A3</color>
     <color name="grey_dark">#838383</color>
     <color name="grey_dark_button">#54585D</color>
