--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -113,6 +113,7 @@
     <color name="grey_light_bg_v2">#d8d8d8</color>
     <color name="grey_light_v2">#A4A4A4</color>
     <color name="grey_dark_less">#A3A3A3</color>
+    <color name="grey_light_boarder">#d2d1d1</color>
     <color name="grey_dark">#838383</color>
     <color name="grey_dark_button">#54585D</color>
     <color name="grey_dark_more">#5D5D5D</color>
