--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_request_accept.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_request_accept.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:splitMotionEvents="false"
-    android:visibility="visible"
-    android:layout_marginTop="@dimen/top_bar_height">
+    android:visibility="gone"
+    android:layout_below="@+id/topRlOuter">
 
     <Button
         android:id="@+id/driverRequestAcceptBackBtn"
